--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,27 +20,28 @@ if (NOT WIN32)
     add_compile_options(-v)
     add_link_options(-v)
 
-    option(USE_OLD_DXVK "Use old DXVK Native for native D3D11 API" ON)
+    option(USE_OLD_DXVK "Use old DXVK Native for DXGI" OFF)
     if (USE_OLD_DXVK)
         message("Using DXVK Native for D3D11 API")
+        set(DXVK_TYPE "native")
         set(DXVK_GIT_REPOSITORY "https://github.com/misyltoad/dxvk-native")
         set(DXVK_GIT_TAG "master")
         set(DXVK_EXTRA_PARAM "")
     else()
-        message("Using DXVK master for D3D11 API")
+        message("Using DXVK master for DXGI")
+        set(DXVK_TYPE "upstream")
         set(DXVK_GIT_REPOSITORY "https://github.com/doitsujin/dxvk")
         set(DXVK_GIT_TAG "master")
         set(DXVK_EXTRA_PARAM "-Denable_d3d8=false")
     endif()
     include(ExternalProject)
-    set(DXVK_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/dxvk-src")
-    set(DXVK_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/dxvk-bin")
+    set(DXVK_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/dxvk-src-${DXVK_TYPE}")
+    set(DXVK_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/dxvk-bin-${DXVK_TYPE}")
     set(DIRECTX_INCLUDE_DIRS
         "${DXVK_SOURCE_DIR}/include/native/directx"
         "${DXVK_SOURCE_DIR}/include/native/windows"
     )
     set(DIRECTX_LIBS
-        "${DXVK_BINARY_DIR}/src/d3d11/libdxvk_d3d11.so"
         "${DXVK_BINARY_DIR}/src/dxgi/libdxvk_dxgi.so"
     )
     ExternalProject_Add(dxvk
@@ -51,7 +52,7 @@ if (NOT WIN32)
         SOURCE_DIR        ${DXVK_SOURCE_DIR}
         BINARY_DIR        ${DXVK_BINARY_DIR}
         CONFIGURE_HANDLED_BY_BUILD ON
-        CONFIGURE_COMMAND meson setup ../dxvk-src --buildtype=debug ${DXVK_EXTRA_PARAM} -Denable_d3d9=false -Denable_d3d10=false -Denable_d3d11=false -Denable_dxgi=true
+        CONFIGURE_COMMAND meson setup ../dxvk-src-${DXVK_TYPE} --buildtype=debug ${DXVK_EXTRA_PARAM} -Denable_d3d9=false -Denable_d3d10=false -Denable_d3d11=false -Denable_dxgi=true
         BUILD_COMMAND     ninja
         INSTALL_COMMAND   ""
         BUILD_BYPRODUCTS  ${DIRECTX_LIBS}
@@ -62,6 +63,7 @@ set(SRC_FILES source.cpp)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 if(NOT WIN32)
+add_dependencies(${PROJECT_NAME} dxvk)
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${DIRECTX_INCLUDE_DIRS}
 )
