add SDL2 to link libs, change DXVK Native url, enable d3d11 - required
in DXVK Native. Error message:
src/meson.build:20:4: ERROR: Problem encountered: D3D11 is required for DXGI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Install libs
       run: |
-        sudo apt-get update && sudo apt-get install libvulkan-dev clang meson ninja-build
+        sudo apt-get update && sudo apt-get install libsdl2-dev libvulkan-dev glslang-tools clang meson ninja-build
     - name: Build
       run: |
         export CC=clang && export CXX=clang++
@@ -51,4 +51,4 @@ jobs:
     - name: Run test
       run: |
         pwd
-        DXVK_WSI_DRIVER=SDL2 ./build/Ninja-${{matrix.Configuration}}/${{matrix.Configuration}}/dxvk-test
+        DXVK_WSI_DRIVER=SDL2 ./build/Ninja-${{matrix.Configuration}}/Debug/dxvk-test
