--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,15 @@ add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 if (NOT WIN32)
     include(ExternalProject)
+    option(USE_DXVK_THEN_VKD3D_HEADERS "Use DXVK headers 1st and then VKD3D headers" OFF)
+    if (USE_DXVK_THEN_VKD3D_HEADERS)
+        add_definitions(-DUSE_DXVK_THEN_VKD3D_HEADERS)
+    endif()
     option(DISABLE_DXVK "Disable DXVK calls (use only VKD3D)" OFF)
-    option(USE_OLD_DXVK "Use old DXVK Native for DXGI" OFF)
     if (DISABLE_DXVK)
         add_definitions(-DDISABLE_DXVK)
     else()
+    option(USE_OLD_DXVK "Use old DXVK Native for DXGI" OFF)
     if (USE_OLD_DXVK)
         message("Using DXVK Native for D3D11 API")
         set(DXVK_TYPE "native")
