add USE_VKD3D_THEN_DXVK_HEADERS option without presets - not working yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,10 @@ if (NOT WIN32)
     if (USE_DXVK_THEN_VKD3D_HEADERS)
         add_definitions(-DUSE_DXVK_THEN_VKD3D_HEADERS)
     endif()
+    option(USE_VKD3D_THEN_DXVK_HEADERS "Use VKD3D headers 1st and then DXVK headers" OFF)
+    if (USE_VKD3D_THEN_DXVK_HEADERS)
+        add_definitions(-DUSE_VKD3D_THEN_DXVK_HEADERS)
+    endif()
     option(DISABLE_DXVK "Disable DXVK calls (use only VKD3D)" OFF)
     if (DISABLE_DXVK)
         add_definitions(-DDISABLE_DXVK)
