--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
     - name: Install libs
       run: |
         sudo apt-get update && sudo apt-get install libsdl2-dev mesa-vulkan-drivers vulkan-tools libvulkan-dev glslang-tools clang meson ninja-build libjson-perl spirv-headers wine64-tools
+        wget https://launchpad.net/ubuntu/+source/automake-1.17/1:1.17-3ubuntu1/+build/30326801/+files/automake_1.17-3ubuntu1_all.deb
+        sudo apt-get install ./automake_1.17-3ubuntu1_all.deb
     - name: Build
       run: |
         export CC=clang && export CXX=clang++
