--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,19 +38,26 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Install libs
-      run: |
-        sudo apt-get update && sudo apt-get install libsdl2-dev mesa-vulkan-drivers vulkan-tools libvulkan-dev glslang-tools clang meson ninja-build libjson-perl spirv-headers wine64-tools
-        wget https://launchpad.net/ubuntu/+source/automake-1.17/1:1.17-3ubuntu1/+build/30326801/+files/automake_1.17-3ubuntu1_all.deb
-        sudo apt-get install ./automake_1.17-3ubuntu1_all.deb
-    - name: Build
-      run: |
-        export CC=clang && export CXX=clang++
-        ${CXX} --version && cmake --version
-        cmake --preset=Ninja-${{matrix.Configuration}}
-        cmake --build build/Ninja-${{matrix.Configuration}}
-
-    - name: Run test
-      run: |
-        echo ${{matrix.Configuration}} test result:
-        DXVK_WSI_DRIVER=SDL2 ./build/Ninja-${{matrix.Configuration}}/Debug/dxvk-test
+    - name: Install libs, build and test
+      uses: uraimo/run-on-arch-action@v3
+      with:
+        arch: none
+        distro: none
+        base_image: --platform=linux/amd64 amd64/ubuntu:25.10
+        # GitHub token used for caching Docker images in project's public package registry
+        githubToken: ${{github.token}}
+        # Mount the juffed directory as /artifacts in the container
+        dockerRunArgs: |
+          --volume "${PWD}:/artifacts"
+        # Install dependencies in the container. They will be cached
+        install: |
+          export DEBIAN_FRONTEND=noninteractive
+          apt-get update -q -y
+          apt-get install -q -y automake-1.17 bison cmake flex gcc git libsdl2-dev mesa-vulkan-drivers vulkan-tools libvulkan-dev glslang-tools clang meson ninja-build libjson-perl spirv-headers wine64-tools
+        run: |
+          export CC=clang && export CXX=clang++
+          ${CXX} --version && cmake --version
+          cmake --preset=Ninja-${{matrix.Configuration}}
+          cmake --build build/Ninja-${{matrix.Configuration}}
+          echo ${{matrix.Configuration}} test result:
+          DXVK_WSI_DRIVER=SDL2 ./build/Ninja-${{matrix.Configuration}}/Debug/dxvk-test
