cmake: build vkd3d with gcc and -fPIC flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,10 @@ if (NOT WIN32)
     ProcessorCount(N)
     message("ProcessorCount = ${N}")
     set(VKD3D_CONFIG "./configure")
+    list(APPEND VKD3D_CONFIG "CXX=g++")
+    list(APPEND VKD3D_CONFIG  "CC=gcc")
+    list(APPEND VKD3D_CONFIG "CPPFLAGS=-fPIC")
+    list(APPEND VKD3D_CONFIG   "CFLAGS=-fPIC")
     #list(APPEND VKD3D_CONFIG "CPPFLAGS=-O3 -DNDEBUG -DVKD3D_NO_TRACE_MESSAGES")
     #list(APPEND VKD3D_CONFIG   "CFLAGS=-O3 -DNDEBUG -DVKD3D_NO_TRACE_MESSAGES")
     set(VKD3D_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/vkd3d-src")
