--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,14 +38,14 @@ if (NOT WIN32)
         # result comman will be: ./configure "CPPFLAGS=-O3 -DNDEBUG -DVKD3D_NO_TRACE_MESSAGES" "CFLAGS=-O3 -DNDEBUG -DVKD3D_NO_TRACE_MESSAGES"
         CONFIGURE_COMMAND ./autogen.sh && ${CMAKE_COMMAND} -E env ${VKD3D_CONFIG}
         BUILD_COMMAND     make -j${N}
-        BUILD_BYPRODUCTS  ${VKD3D_SOURCE_DIR}/.libs/libvkd3d.so ${VKD3D_SOURCE_DIR}/.libs/libvkd3d-shader.so ${VKD3D_SOURCE_DIR}/.libs/libvkd3d-utils.so
+        BUILD_BYPRODUCTS  ${VKD3D_SOURCE_DIR}/.libs/libvkd3d.a ${VKD3D_SOURCE_DIR}/.libs/libvkd3d-shader.a ${VKD3D_SOURCE_DIR}/.libs/libvkd3d-utils.a
         INSTALL_COMMAND   ""
     )
     set(DIRECTX_INCLUDE_DIRS "${VKD3D_SOURCE_DIR}/include")
     set(DIRECTX_LIBS
-        "${VKD3D_SOURCE_DIR}/.libs/libvkd3d.so"
-        "${VKD3D_SOURCE_DIR}/.libs/libvkd3d-shader.so"
-        "${VKD3D_SOURCE_DIR}/.libs/libvkd3d-utils.so"
+        "${VKD3D_SOURCE_DIR}/.libs/libvkd3d.a"
+        "${VKD3D_SOURCE_DIR}/.libs/libvkd3d-shader.a"
+        "${VKD3D_SOURCE_DIR}/.libs/libvkd3d-utils.a"
     )
     #target_link_options(${PROJECT_NAME} PRIVATE -v -flto)
     add_dependencies(${PROJECT_NAME} vkd3d)
